--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [project]
-name = "3dgs"
+name = "gaussian-splatting"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = ["transformers>=4.52.4",
+
+]  # Instalación manual por grupos
 
 [project.optional-dependencies]
 torch = [
@@ -12,19 +14,14 @@ torch = [
     "torchaudio",
     "torchvision"
 ]
-
 base = [
     "joblib>=1.4.2",
     "numpy==1.26.4",
     "opencv-python>=4.11.0.86",
     "plyfile>=1.1",
     "setuptools>=79.0.0",
-    "tqdm>=4.67.1",
-    "tensorboard",
-    "transformers>=4.52.4",
-    "pytorch3d"
+    "tqdm>=4.67.1"
 ]
-
 submodules = [
     "diff-gaussian-rasterization",
     "fused-ssim",
@@ -38,11 +35,11 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 packages = []
 
+
 [tool.uv.sources]
 torch = [{ index = "pytorch-cu128" }]
 torchvision = [{ index = "pytorch-cu128" }]
 torchaudio = [{ index = "pytorch-cu128" }]
-pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git" }
 diff-gaussian-rasterization = { path = "submodules/diff-gaussian-rasterization" }
 simple-knn = { path = "submodules/simple-knn" }
 fused-ssim = { path = "submodules/fused-ssim" }
@@ -52,6 +49,3 @@ fused-ssim = { path = "submodules/fused-ssim" }
 name = "pytorch-cu128"
 url = "https://download.pytorch.org/whl/cu128"
 explicit = true
-
-[tool.uv]
-no-build-isolation-package = ["pytorch3d"]
